# irodori-extension-trino-presto

./: .gitignore  Cargo.toml  LICENSE-0BSD  LICENSE-MIT  Makefile  README.ja.md  README.md  connector.config.json  connector.source.json  irodori.extension.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
native/source/: README.ja.md  README.md
src/: abi.rs  driver.rs  lib.rs  stub.rs
tools/: README.ja.md  README.md  connector_metadata_presets.json  generate_connector_metadata.py  generate_readmes.py
