[package]
name = "irodori-extension-trino-presto"
version = "0.1.2"
edition = "2021"
license = "0BSD"
description = "Native Irodori Table connector extension for Trino / Presto."
repository = "https://github.com/hjosugi/irodori-extension-trino-presto"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_trino_presto"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
